# motivation-level-checker-app

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-cd.yml  train-model.yml
config/: config.yaml
data/models/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep  sample_entries.csv  sample_journal_entries.json
docs/: ARCHITECTURE.md
notebooks/: exploratory_analysis.ipynb
scripts/: example_usage.py  run_api.py  train_model.py
src/api/: main.py
src/data/: ingestion.py  preprocessing.py
src/models/: mood_analyzer.py
src/monitoring/: metrics.py
src/motivation_checker/: __init__.py
src/motivation_checker/api/: main.py
src/motivation_checker/data/: preprocessing.py
src/motivation_checker/models/: mood_analyzer.py  train.py
src/motivation_checker/monitoring/: __init__.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: sample.py  test_mood_analyzer.py  test_preprocessing.py
