[tool.poetry]
name="motivation-level-checker"
version="0.1.0"
description="MLOps application for checking mood and motivation levels from journal entries"
authors= ["Dheena Leonora <dheenaleo2512@gmail.com>"]
packages = [{include = "motivation_checker", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.24.0"
pandas = ">=2.0.0"
scikit-learn = ">=1.3.0"
nltk = ">=3.8.0"
textblob = ">=0.17.0"
fastapi = ">=0.100.0"
uvicorn = ">=0.23.0"
pydantic = ">=2.0.0"
mlflow = ">=2.5.0"
python-dotenv = ">=1.0.0"
pyyaml = ">=6.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
httpx = ">=0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

